tests/miniJava/neg/005279_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] true ( ) { return 0 ; } }
